[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
name = "zero2prod"
path = "src/lib.rs"

[[bin]]
name = "zero2prod"
path = "src/main.rs"

[dependencies]
axum = "0.4.4"
config = "0.11.0"
hyper = { version = "0.14.16", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sqlx = { version = "0.5.10", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
] }
tokio = { version = "1.16.1", features = ["full"] }
tower-http = { version = "0.2.2", features = ["trace", "request-id"] }
tracing = { version = "0.1.30", features = ["log"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.8", features = [
    "registry",
    "env-filter",
] }

uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
tower = { version = "0.4.11", features = ["full"] }
once_cell = "1.9.0"
